<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CancelarTurno">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/tituloCancelar"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/mensajeCancelar"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_atras_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="69dp"
        android:background="@color/boton"
        android:onClick="consulta"
        android:text="@string/atras"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_aceptar_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="71dp"
        android:layout_toEndOf="@+id/bt_atras_cancelar"
        android:layout_toRightOf="@+id/bt_atras_cancelar"
        android:background="@color/boton"
        android:onClick="aceptar"
        android:text="@string/aceptar"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lb_mensaje2_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_atras_cancelar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/mensaje2Cancelar"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_salir_cancelar"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_mensaje2_cancelar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@color/boton"
        android:onClick="cancelar"
        android:text="@string/salir"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="invisible" />
</RelativeLayout>