<?xml version="1.0" encoding="utf-8"?>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo"
        android:orientation="vertical"
        tools:context=".Consulta">


        <Button
            android:id="@+id/bt_cancelar"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_modificar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="#1F9A9A"
            android:onClick="cambiarSolCodOperacion"
            android:text="@string/cancelar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bt_modificar"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lb_hora_consul"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@color/boton"
            android:onClick="cambiarSolCodOperacion"
            android:text="@string/modificar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/lb_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/dni"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lb_consulta_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lb_dni"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tipoTramite"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    <EditText
        android:id="@+id/txt_dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/lb_dni"
        android:layout_toRightOf="@+id/lb_dni"
        android:ems="10"
        android:inputType="number" />

        <TextView
            android:id="@+id/lb_nombre_consul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_buscar"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/nombre"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_consulta"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/lb_dni"
            android:layout_toRightOf="@+id/lb_dni"
            android:background="@color/boton"
            android:onClick="buscar"
            android:text="@string/buscar"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/lb_apellido_consul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_nombre_consul"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/apellido"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lb_tipo_consul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_apellido_consul"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tipoTramite"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lb_Oficina_consul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_tipo_consul"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/oficina"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lb_fecha_consul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_Oficina_consul"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fecha"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lb_hora_consul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_fecha_consul"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hora"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_consulta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lb_consulta_tipo"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
    </ScrollView>

