<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/fondo"
    android:padding="5dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/boton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/requisitos"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/emergente4"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_cerrarEmergente4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:onClick="cambiarAFecha"
        android:text="@string/cerrar" />
</LinearLayout>